# CloudGuardian

./: Makefile  README.md  cele.md  docker-compose.yml
agent/: Cargo.toml  build.rs
agent/src/: graph.rs  main.rs  parser.rs
agent/src/pii/: mod.rs
agent/tests/: terraform_mock.tf
data/: compliance_scan.csv  leak_test.csv
proto/: cloudguardian.proto
server/: db.go  go.mod  go.sum  main.go  main_test.go
server/ai/: advisor.go  advisor_test.go  ollama.go  ollama_test.go
server/proto/: cloudguardian.pb.go  cloudguardian_grpc.pb.go
stress_test/iac/: huge_infra.tf
testing_infra/: complex_scenario.tf  main.tf
