[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# gRPC i Protocol Buffers
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
# To narzędzie zostanie użyte przez build.rs
tonic-build = "0.11"



